# bgfx.cmake

./: CMakeLists.txt
brtshaderc/: CMakeLists.txt  brtshaderc.cpp
cmake/: bgfx.cmake  bx.cmake  examples.cmake  shared.cmake
cmake/tools/: geometryc.cmake
